Fixed issue - form breaks inbetween media queries

--- a/src/App.css
+++ b/src/App.css
@@ -216,7 +216,7 @@ footer {
   }
 
   .form-container {
-    width: 100%;
+    width: 400px;
     height: auto;
   }
 
@@ -236,6 +236,5 @@ footer {
 
   footer {
     margin-top: 2rem;
-    width: 400px;
   }
 }
